# booru-viewer

./: .gitignore  CHANGELOG.md  HYPRLAND.md  KEYBINDS.md  LICENSE  README.md  TODO.md  booru-viewer.spec  installer.iss  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  docs.yaml  feature_request.yaml  hyprland_wayland.yaml  performance.yaml  site_support.yaml  theme_submission.yaml  ux_feedback.yaml
.github/workflows/: tests.yml
booru_viewer/: main_gui.py  main_tui.py
booru_viewer/core/: __init__.py  cache.py  concurrency.py  config.py  db.py  images.py  library_save.py
booru_viewer/core/api/: __init__.py  _safety.py  base.py  category_fetcher.py  danbooru.py  detect.py  e621.py  gelbooru.py  (+1 more)
booru_viewer/gui/: _source_html.py  app.py  app_runtime.py  async_signals.py  bookmarks.py  context_menus.py  custom_css_guide.txt  dialogs.py  favorites.py  grid.py  info_panel.py  library.py  log_handler.py  main_window.py  media_controller.py  popout_controller.py  post_actions.py  preview.py  preview_pane.py  privacy.py  search.py  search_controller.py  search_state.py  settings.py  sites.py  theme.py  window_state.py
booru_viewer/tui/: app.py  favorites.py  grid.py  preview.py  search.py  sites.py
tests/: conftest.py
tests/core/: test_cache.py  test_concurrency.py  test_config.py  test_db.py  test_pil_safety.py
tests/gui/: test_media_controller.py  test_popout_controller.py  test_post_actions.py  test_search_controller.py  test_source_html.py  test_window_state.py
themes/: README.md  catppuccin-mocha-rounded.qss  catppuccin-mocha-square.qss  catppuccin-mocha.qss  everforest-rounded.qss  everforest-square.qss  everforest.qss  gruvbox-rounded.qss  gruvbox-square.qss  gruvbox.qss  nord-rounded.qss  nord-square.qss  nord.qss  solarized-dark-rounded.qss  solarized-dark-square.qss  solarized-dark.qss  tokyo-night-rounded.qss  tokyo-night-square.qss  tokyo-night.qss
(+15 files in other folders)
