[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "booru-viewer"
version = "0.1.8"
description = "Local booru image browser with Qt6 GUI"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "Pillow>=10.0",
    "PySide6>=6.6",
]

[project.scripts]
booru-viewer = "booru_viewer.main_gui:main"

[tool.hatch.build.targets.wheel]
packages = ["booru_viewer"]

[tool.hatch.build.targets.sdist]
include = ["booru_viewer"]
