[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "booru-viewer"
version = "0.2.2"
description = "Local booru image browser with Qt6 GUI"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "Pillow>=10.0",
    "PySide6>=6.6",
    "python-mpv>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
booru-viewer = "booru_viewer.main_gui:main"

[tool.hatch.build.targets.wheel]
packages = ["booru_viewer"]

[tool.hatch.build.targets.sdist]
include = ["booru_viewer"]
